<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WedBlog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feather_content_description">feather icon</string>
    <string name="view_sample_post">View Sample Post</string>
    <string name="title_activity_create_blog">CreateBlogActivity</string>
    <string name="write_post">Write Post</string>
    <string name="title_activity_view_post">ViewPostActivity</string>
    <string name="create_post_header">Create a new blog post!</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="body">Body</string>
    <string name="post_">Post!</string>
    <string name="title_activity_post_list">PostListActivity</string>

</resources>
