<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weddingwire.wedblog.activities.CreatePostActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#ddd"
    >

    <TextView
        android:id="@+id/new_blog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_post_header"
        style="@android:style/TextAppearance.Large"
        android:padding="@dimen/activity_horizontal_margin"
        />

    <EditText
        android:id="@+id/title"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/author"
        android:hint="@string/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/body"
        android:hint="@string/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textLongMessage"
        android:gravity="top"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/create_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_"
        />


</LinearLayout>
